# dir-analyzer

./: Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs  report.rs  scanner.rs  tui.rs
